deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi
  namespace: genai

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:

    metadata:
      labels:
        app: fastapi

    spec:

      containers:
      - name: fastapi

        image: ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/genai-fastapi:latest

        ports:
        - containerPort: 8080
