service.yaml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service
  namespace: genai

spec:

  selector:
    app: fastapi

  ports:
  - port: 80
    targetPort: 8080

  type: ClusterIP
