ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: genai-ingress
  namespace: genai

spec:

  ingressClassName: nginx

  rules:
  - http:

      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: fastapi-service
            port:
              number: 80
